driver: te600: fix [X5-1233] Optimize the performance of the te600 driver
Summary:
0001_linux_lca_updates_for_r3p1.patch
0002_linux_lca_other_updates_for_r3p1.patch

https://horizonrobotics.feishu.cn/docx/TyTydZO4RoMruoxF52acAyJjn3d

Signed-off-by: zhiwei01.li <zhiwei01.li@d-robotics.cc>
Change-Id: Id5b4e7b9028c582ddf2b8ad156f61074317146ee

--- a/drivers/crypto/te/Makefile
+++ b/drivers/crypto/te/Makefile
@@ -68,5 +68,7 @@ te_crypto-y := $(TE_OBJECTS)                                \
                lca_te_otp.o                                 \
                lca_te_trng.o                                \
                lca_te_akcipher.o                            \
-               lca_te_kpp.o
+               lca_te_kpp.o                                 \
+               lca_te_ctx.o                                 \
+               lca_te_ra.o
 
