dts: hobot: fix [X5-1541] Fix HDMI issue on SVB board
Signed-off-by: jiale01.luo <jiale01.luo@horizon.cc>
Change-Id: I3fa1faf735dfefa42f64f540f6b7d1807f16604d

--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -244,14 +244,6 @@
 						<&bt1120_bridge_out>;
 				};
 			};
-
-			port@1 {
-				reg = <1>;
-
-				bt1120_bridge_out: endpoint {
-					remote-endpoint = <&hdmi_bridge_in>;
-				};
-			};
 		};
 	};
 };
@@ -825,6 +817,17 @@
 	status = "okay";
 
 
+};
+
+&bt1120_bridge {
+	ports {
+		port@1 {
+			reg = <1>;
+			bt1120_bridge_out: endpoint {
+				remote-endpoint = <&hdmi_bridge_in>;
+			};
+		};
+	};
 };
 
 &bt1120_syscon_bridge {
