feat(wifi): init wifi Onboard antenna
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -141,6 +141,14 @@
 	status = "okay";
 };
 
+//wifi antenna Onboard
+&dsp_gpio_porta {
+	pinctrl-names = "default";
+	pinctrl-0 = < &dsp_gpio0_17
+				  &dsp_gpio0_18
+				>;
+};
+
 // 40pin GPIO
 &ls_gpio0_porta {
 	pinctrl-names = "default";
