--- a/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
@@ -121,13 +121,13 @@
 
 	dsp_gpio0_17: dsp_gpio0_17 {
 		horizon,pins = <
-			DSP_PDM_IN2  DSP_PINMUX_0  BIT_OFFSET30  MUX_ALT1  &pconf_input_en_1v8
+			DSP_PDM_IN2  DSP_PINMUX_0  BIT_OFFSET30  MUX_ALT1  &pconf_output_high
 		>;
 	};
 
 	dsp_gpio0_18: dsp_gpio0_18 {
 		horizon,pins = <
-			DSP_PDM_IN3  DSP_PINMUX_1  BIT_OFFSET0  MUX_ALT1  &pconf_input_en_1v8
+			DSP_PDM_IN3  DSP_PINMUX_1  BIT_OFFSET0  MUX_ALT1  &pconf_output_low
 		>;
 	};
 
