--- a/arch/arm64/boot/dts/hobot/Makefile
+++ b/arch/arm64/boot/dts/hobot/Makefile
@@ -1,3 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 DTC_FLAGS += -@
 dtb-y += x5-fpga.dtb x5-som.dtb x5-svb.dtb x5-evb.dtb x5-evb-v2.dtb x5-rdk.dtb
+
+# Enable fixups to support overlays on RDK platforms
+DTC_FLAGS += -@
