dts: hobot: feat [X5-1571] Add spi1_ssn1 pingroup setting
Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: Idf39fd37dfa1d55ebcbb49b5c6c83b625dac8839

--- a/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
@@ -344,6 +344,12 @@
 		>;
 	};
 
+	pinctrl_spi1_ssn1: spi1_ssn1grp {
+		horizon,pins = <
+			LSIO_SPI1_SSN_1  LSIO_PINMUX_0 BIT_OFFSET0  MUX_ALT0 &pconf_drv_pu_ds2_1v8
+		>;
+	};
+
 	pinctrl_spi2: spi2grp {
 		horizon,pins = <
 			LSIO_SPI2_SCLK LSIO_PINMUX_1 BIT_OFFSET16  MUX_ALT0 &pconf_drv_pu_ds2_3v3
