--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -297,6 +297,7 @@ CONFIG_VIDEO_VS_SIF_V4L=m
 CONFIG_VIDEO_VS_GDC_ARM_V4L=m
 CONFIG_VIDEO_HOBOTC_JPU=m
 CONFIG_VIDEO_HOBOTC_VPU=m
+CONFIG_VIDEO_OV5640=m
 # CONFIG_CXD2880_SPI_DRV is not set
 # CONFIG_MEDIA_TUNER_E4000 is not set
 # CONFIG_MEDIA_TUNER_FC0011 is not set
