usb: horizon: fix [X5-1599] Add "xhci,reset-on-resume-quirk;" for xhci resume case.
- We meet suspend/resume error log like below:
"xhci-hcd xhci-hcd.3.auto: xHC error in resume, USBSTS 0x401, Reinit"

- Maybe some suspend issue exist for usb controller.

- Just let it do reset before resume, and try to avoid this error log
  fist.

- For root cause, as we don't support dwc3 hiberntion feature.
- We don't have scratched buffer for controller context save and
  restore.
- Maybe... we really don't support usb save/restore's PM mechanism...

- Anyway,try it first...

Change-Id: I9aa36cb7e596ee2cbc6d4767fc7636ad3e95d5bd
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3227,6 +3227,7 @@
 					usb-role-switch;
 					usb-phy = <&usb3_u2phy>;
 					snps,dis_u2_susphy_quirk;
+					xhci,reset-on-resume-quirk;
 					interrupt-parent = <&gic>;
 					interrupts = <GIC_SPI 30 IRQ_TYPE_LEVEL_HIGH>;
 
@@ -3266,6 +3267,7 @@
 					maximum-speed = "high-speed";
 					// usb-phy = <&usb2phy>;
 					snps,dis_u2_susphy_quirk;
+					xhci,reset-on-resume-quirk;
 					interrupt-parent = <&gic>;
 					interrupts = <GIC_SPI 29 IRQ_TYPE_LEVEL_HIGH>;
 
