gpio: debugfs: feat [X5-1618] Add debug-gpio driver to parse pinmux-gpio.dtsi
Summary:
The GPIO information can be exported via debugfs, including pin node and pin name information.

Signed-off-by: jinbao.he <jinbao.he@d-robotics.cc>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -43,6 +43,14 @@ config GPIO_ACPI
 	def_bool y
 	depends on ACPI
 
+config HOBOT_GPIO_DEBUG
+	tristate "A simple driver to parse pinmux-gpio.dtsi"
+	depends on ARCH_HOBOT_X5
+	help
+	  The GPIO information can be exported via debugfs, including pin node and pin name information,
+	  which facilitates debugging and printing at the application layer.
+	  It can be used in conjunction with gpiochipinfo at the application layer.
+
 config GPIOLIB_IRQCHIP
 	select IRQ_DOMAIN
 	bool
