feat(dts): [X5-1455] Support ADC scan mode
Summary:
By adding the "guc,scan" fields to support ADC's scan mode, and adding the
"guc,sample-rate" field to set the sampling frequency

Change-Id: Idacee46fb7f20d5ee08aeb3a19c55e56c8fac9bd
Signed-off-by: hongyu.yang <hongyu.yang@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4077,6 +4077,8 @@
 				guc,passwd = <12345678>;
 				#address-cells = <1>;
 				#size-cells = <0>;
+				guc,sample-rate=<300000>;
+				guc,scan;
 				resets = <&socrst LSIO_ADC_RESET>;
 				reset-names = "guc-adc";
 			};
