x5: sd: cd: feat Support cd-inverted to configure the polarity of cd pin
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -392,6 +392,7 @@
 /* SD Card */
 &sdio_0 {
 	status = "okay";
+	cd-inverted;
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sd &hsio_gpio0_26 &hsio_gpio1_1>;
