--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -126,6 +126,10 @@
 	cpu-supply = <&vdd08_cpu_reg>;
 };
 
+&rtc {
+	status = "disabled";
+};
+
 &x5_bpu_pd {
 	bpu-supply = <&vdd08_bpu_1_reg>;
 };
@@ -214,7 +218,15 @@
 				};
 			};
 		};
+		hpu3501-rtc {
+			opsel = <0>;
+			// AON_RTC_ALARM_N_1V8 - AON_GPIO_PIN2
 
+			pinctrl-names = "default";
+			pinctrl-0 = <&aon_gpio_2>;
+			interrupt-parent = <&aon_gpio_porta>;
+			interrupts = <2 IRQ_TYPE_EDGE_RISING>;
+		};
 	};
 };
 
@@ -418,6 +430,7 @@
 	status = "disabled";
 };
 
+
 &dw_i2s1 {
 	status = "okay";
 	#sound-dai-cells = <1>;
@@ -461,7 +474,7 @@
 };
 
 &remoteproc_hifi5 {
-	status = "okay";
+	status = "disabled";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
 	shm-addr = <&adsp_bsp_reserved>;
@@ -731,7 +744,7 @@ the following ports need to be deleted*/
 };
 
 &gmac_tsn {
-	status = "disabled";
+	status = "okay";
 
 	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
