rdk: evb_1b: feat Support EVB_1B on rdkos systems
Summary:
 - Enable gmac_tsn
 - Disable chip built-in rtc
 - Configure hpu3501's rtc

Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -120,6 +120,10 @@
 	cpu-supply = <&vdd08_cpu_reg>;
 };
 
+&rtc {
+	status = "disabled";
+};
+
 &x5_bpu_pd {
 	bpu-supply = <&vdd08_bpu_1_reg>;
 };
@@ -203,7 +207,15 @@
 				};
 			};
 		};
+		hpu3501-rtc {
+			opsel = <0>;
+			// AON_RTC_ALARM_N_1V8 - AON_GPIO_PIN2
 
+			pinctrl-names = "default";
+			pinctrl-0 = <&aon_gpio_2>;
+			interrupt-parent = <&aon_gpio_porta>;
+			interrupts = <2 IRQ_TYPE_EDGE_RISING>;
+		};
 	};
 
 	sc230ai@30 {
@@ -493,6 +505,7 @@
 	status = "disabled";
 };
 
+
 &dw_i2s1 {
 	status = "okay";
 	#sound-dai-cells = <1>;
@@ -533,7 +546,7 @@
 };
 
 &remoteproc_hifi5 {
-	status = "okay";
+	status = "disabled";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
 	remoteproc-ipc = <&ipc_instance1>;
@@ -871,7 +884,7 @@ the following ports need to be deleted*/
 };
 
 &gmac_tsn {
-	status = "disabled";
+	status = "okay";
 
 	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
