net: hobot: feat Enable hobot-eth drivers
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -551,6 +551,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_X5_ETH=y
+CONFIG_JPLUS_ETH=y
 CONFIG_MARVELL_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_CAN_VCAN=m
