--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -723,8 +723,27 @@ the following ports need to be deleted */
 };
 
 /**display sub-system end**/
-&gmac_tsn {
+
+&horizon_tsn {
 	status = "okay";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &hsio_gpio0_23>;
+	phyreset-gpio = <&hs_gpio0_porta 23 GPIO_ACTIVE_HIGH>;
+};
+
+&hobot_tsn {
+	status = "disabled";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_31>;
+	phyreset-gpio = <&ls_gpio0_porta 31 GPIO_ACTIVE_HIGH>;
+};
+
+&gmac_tsn {
+	status = "disabled";
 
 	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
