--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -744,7 +744,7 @@ the following ports need to be deleted*/
 };
 
 &gmac_tsn {
-	status = "okay";
+	status = "disabled";
 
 	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
