net: hobot: feat Enable hobot-eth drivers
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -884,7 +884,7 @@ the following ports need to be deleted*/
 };
 
 &gmac_tsn {
-	status = "okay";
+	status = "disabled";
 
 	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
