--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4064,7 +4064,7 @@
 				reg = <0x34190000 0x10000>,	/* adc */
 				      <0x34180100 0x10>;	/* password */
 				interrupt-parent = <&gic>;
-				interrupts = <GIC_SPI 74 IRQ_TYPE_LEVEL_HIGH>;
+				interrupts = <GIC_SPI 74 IRQ_TYPE_EDGE_RISING>;
 				clocks = <&hpsclks X5_LSIO_ADC_CLK>,<&hpsclks X5_LSIO_ADC_PCLK>;
 				clock-names = "adc-clk","adc-pclk";
 				assigned-clock-rates = <32000000>;
@@ -4077,7 +4077,7 @@
 				guc,passwd = <12345678>;
 				#address-cells = <1>;
 				#size-cells = <0>;
-				guc,sample-rate=<300000>;
+				guc,sample-rate=<50000>;
 				guc,scan;
 				resets = <&socrst LSIO_ADC_RESET>;
 				reset-names = "guc-adc";
