dts: hobot: fix [X5-552] Enable hobot-pss node in EVB V2
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Id6e3dc2af7adce879ea9ea6b5167435a3701fc48

--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -819,3 +819,7 @@ the following ports need to be deleted*/
 	pinctrl-names = "default";
 	pinctrl-0 = <&aon_gpio_7>;
 };
+
+&hobot_pps {
+	status = "okay";
+};
