dts: hobot: feat [X5-1613] Update ipc_instance1 channel num define
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: I9423110aa6181c91c2c6dec32bbdcb1fe694b74f

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3629,7 +3629,7 @@
 			mboxes = <&mailbox0 0 1 0 1 0 1 0 1 0>;
 			instance = <1>;
 			def_mode = <1>;
-			num_chans = <1>;
+			num_chans = <3>;
 			shm_size = <0x400>;
 			ipc-mask-offset = <0x8000>;
 			ipc_channel0 {
@@ -3643,6 +3643,13 @@
 				num_pools = <1>;
 				ipc_pool0 {
 					num_bufs = /bits/ 16 <8>;//note big-endian and little-endian
+					buf_size = <32>;
+				};
+			};
+			ipc_channel2 {
+				num_pools = <1>;
+				ipc_pool0 {
+					num_bufs = /bits/ 16 <2>;
 					buf_size = <32>;
 				};
 			};
