--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -60,7 +60,7 @@
 		control-rpmsg-channel-mapping = <0x00 0x00      // a core to hifi 0
 								>;
 		msg-wrapper = <&ipc_wrapper>;
-		memory-region = <&adsp_bsp_reserved>;
+		gua-ipc = <&ipc_instance0>;
 		status = "okay";
 	};
 
@@ -76,7 +76,6 @@
 		compatible = "gua,sound-card";
 		model = "gua-audio";
 		cpu-dai = <&sound_cpu>;
-		memory-region = <&audio_reserved>;
 		status = "okay";
 	};
 };
@@ -1042,21 +1041,18 @@
 
 &ipc_instance0 {
 	status = "okay";
-	shm-addr = <&adsp_ipc_reserved>;
 	local-offset = <0x0>;
 	remote-offset = <0x400>;
 };
 
 &ipc_instance1 {
 	status = "okay";
-	shm-addr = <&adsp_ipc_reserved>;
 	local-offset = <0x800>;
 	remote-offset = <0xc00>;
 };
 
 &ipc_instance2 {
 	status = "okay";
-	shm-addr = <&adsp_ipc_reserved>;
 	local-offset = <0x1000>;
 	remote-offset = <0x4000>;
 };
@@ -1065,7 +1061,6 @@
 	status = "okay";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
-	shm-addr = <&adsp_bsp_reserved>;
 	remoteproc-ipc = <&ipc_instance1>;
 };
 
