dts: hobot: feat [X5-1613] Enable check DSP thread running status in
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Ie5dc0840bd420eb2486f6e1c3184536ee993c579

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3563,6 +3563,9 @@
 
 			adsp-sram0-addr = <&adsp_ddr>;
 
+			dspthread-info-offset = <0x600004>;
+			dspthread-status-offset = <0x600000>;
+
 			clocks = <&dspclks X5_DSP_HIFI5_CLK>, <&dspclks X5_DSP_HIFI5_APB_CLK>;
 			clock-names = "hifi5_clk", "hifi5_pbclk";
 			power-domains = <&power X5_DSP_HIFI5>;
